[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/fontMenu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/fontTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main Menu/MapEditorPreMenu.gd" type="Script" id=3]
[ext_resource path="res://Fonts/fontTextEdit.tres" type="DynamicFont" id=4]
[ext_resource path="res://Main Menu/NewGameName.gd" type="Script" id=5]
[ext_resource path="res://Main Menu/MenuBackground.tscn" type="PackedScene" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -281.718, -80.5414 )
script = ExtResource( 3 )

[node name="TextureRect" parent="." instance=ExtResource( 6 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 2 )
text = "Map Editor"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 380.0
margin_right = 517.0
margin_bottom = 661.0
__meta__ = {
"_edit_group_": true
}

[node name="New" type="Button" parent="Buttons"]
margin_right = 417.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "New Project"
flat = true
align = 0

[node name="Load" type="Button" parent="Buttons"]
margin_top = 95.0
margin_right = 417.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 1 )
text = "Load Project"
flat = true
align = 0

[node name="Back" type="Button" parent="Buttons"]
margin_top = 190.0
margin_right = 417.0
margin_bottom = 281.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true
align = 0

[node name="ListPopup" type="PopupMenu" parent="."]
margin_left = 781.0
margin_top = 262.0
margin_right = 1894.0
margin_bottom = 1058.0
custom_fonts/font = ExtResource( 1 )

[node name="NewMapName" type="ConfirmationDialog" parent="."]
margin_left = 540.0
margin_top = 508.0
margin_right = 1340.0
margin_bottom = 605.0
window_title = "Enter New Game Name"
script = ExtResource( 5 )

[node name="TextEdit" type="TextEdit" parent="NewMapName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 4 )

[connection signal="button_up" from="Buttons/New" to="." method="_on_New_button_up"]
[connection signal="button_up" from="Buttons/Load" to="." method="_on_Load_button_up"]
[connection signal="button_up" from="Buttons/Back" to="." method="_on_Back_button_up"]
[connection signal="id_pressed" from="ListPopup" to="." method="_on_ListPopup_id_pressed"]
[connection signal="confirmed" from="NewMapName" to="." method="_on_NewMap_confirmed"]
